fix: thread safety, NPEs, memory leaks, and dead code across plugin